added blog pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <body>
     <h1>The Story of my Web Dev Journey</h1>
     <h2>Any journey worth taking, is a journey worth taking your time. <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
+
+    <ul>
+      <li>Home</li>
+      <li><a href="blog/c1-reflection-blog.html">Reflection</a></li>
+      <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
+      <li><a href="blog/t2-html-css-dom-p1.html">Html, CSS and the DOM</a></li>
+    </ul>
     
     <p>
       I can't wait to meet all of you on this journey we are taking together
