--- a/index.html
+++ b/index.html
@@ -3,18 +3,31 @@
   <head>
     <title>ZimSteve's Blog</title>
     <meta charset="UTF-8">
+    <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
+
   </head>
   
-  <body>
+  <body class="full-background">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">ZimSteve's Blog</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="blog/c1-reflection-blog.html">Reflection</a></li>
+            <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
+          </ul>      
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
     <h1>The Story of my Web Dev Journey</h1>
     <h2>Any journey worth taking, is a journey worth taking your time. <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
-
-    <ul>
-      <li>Home</li>
-      <li><a href="blog/c1-reflection-blog.html">Reflection</a></li>
-      <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
-    </ul>
     
     <p>
       I can't wait to meet all of you on this journey we are taking together
