--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </nav>
 
     <h1>The Story of my Web Dev Journey</h1>
-    <h2>Any journey worth taking, is a journey worth taking your time. <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
+    <h2>Any journey worth taking, is a journey worth taking your time. <br>
+        <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
     
     <p>
       I can't wait to meet all of you on this journey we are taking together
