playing around with borders around headers and paragraphs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>ZimSteve's Blog</title>
     <meta charset="UTF-8">
-    <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 
   </head>
   
@@ -26,13 +26,18 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+  <div class="headers">
+
     <h1>The Story of my Web Dev Journey</h1>
     <h2>Any journey worth taking, is a journey worth taking your time. <br>
         <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
-    
+  </div>
+
+  <div class="paragraphs">
     <p>
       I can't wait to meet all of you on this journey we are taking together
     </p>
-   
+  </div>
+
   </body>
 </html>
