--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
   </div>
 
-  <div class="paragraphs">
+  <div class="center">
     <p>
-      I can't wait to meet all of you on this journey we are taking together
+      Welcome to my first page, the blog of my Web Dev Journey in 2016
     </p>
   </div>
 
