change background and border positioning

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-  <div class="headers">
+  <div class="span grey-text">
 
     <h1>The Story of my Web Dev Journey</h1>
     <h2>Any journey worth taking, is a journey worth taking your time. <br>
