modified date color and linked t2 blog to home page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>ZimSteve's Blog</title>
     <meta charset="UTF-8">
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
     <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
-
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
   </head>
-  
+
   <body class="full-background">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -21,7 +20,8 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="blog/c1-reflection-blog.html">Reflection</a></li>
             <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
-          </ul>      
+            <li><a href="blog/t2-html-css-dom-p1.html">Html, CSS and the DOM</a></li>
+          </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
