--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ZimSteve's Blog</title>
-    <meta charset="UTF-8">
-    <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
-  </head>
-
-  <body class="full-background">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">ZimSteve's Blog</a>
+    <head>
+        <meta charset="utf-8">
+        <title>Steve Sharp | Developer</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/responsive.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <header>
+            <a href="index.html" id="logo">
+                <h1>Steve Sharp</h1>
+                <h2>Developer</h2>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="selected">Portfolio</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div id="wrapper">
+            <section>
+                <ul id="gallery">
+                    <li>
+                        <a href="img/horizon blue sky.jpg">
+                            <img src="img/horizon blue sky.jpg" alt="">
+                            <p>horizon blue sky</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="img/lighthouse walkway.jpg">
+                            <img src="img/lighthouse walkway.jpg" alt="">
+                            <p>lighthouse walkway</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="img/lost lake.jpg">
+                            <img src="img/lost lake.jpg" alt="">
+                            <p>lost lake</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="img/river walkway.jpg">
+                            <img src="img/river walkway.jpg" alt="">
+                            <p>river walkway</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="img/sailboat sunset.jpg">
+                            <img src="img/sailboat sunset.jpg" alt="">
+                            <p>sailboat sunset</p>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <footer>
+                <a href="https://twitter.com/zimscubasteve"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+                <a href="https://www.facebook.com/zimscubasteve"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+                <p>&copy; 2016 Steve Sharp.</p>
+            </footer>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="blog/c1-reflection-blog.html">Reflection</a></li>
-            <li><a href="blog/c1-time-and-habits-blog.html">Time and Habits</a></li>
-            <li><a href="blog/t2-html-css-dom-p1.html">Html, CSS and the DOM</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-  <div class="banner grey-text">
-
-    <h1>The Story of my Web Dev Journey</h1>
-    <h2>Any journey worth taking, is a journey worth taking your time. <br>
-        <em>The Pursuit of happiness is all about the journey, not the destination </em> </h2>
-  </div>
-
-  <div class="center">
-    <p>
-      Welcome to my first page, the blog of my Web Dev Journey in 2016
-    </p>
-  </div>
-
-  </body>
+    </body>
 </html>
