added blog files and tidied up links

--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
             <section>
                 <ul id="gallery">
                     <li>
-                        <a href="img/horizon blue sky.jpg">
-                            <img src="img/horizon blue sky.jpg" alt="">
-                            <p>horizon blue sky</p>
+                        <a href="blog/c1-reflection-blog.html">
+                            <img src="img/horizon-blue-sky.jpg" alt="">
+                            <p>reflection</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/lighthouse walkway.jpg">
-                            <img src="img/lighthouse walkway.jpg" alt="">
-                            <p>lighthouse walkway</p>
+                        <a href="blog/c1-time-and-habits-blog.html">
+                            <img src="img/lighthouse-walkway.jpg" alt="">
+                            <p>time and habits</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/lost lake.jpg">
-                            <img src="img/lost lake.jpg" alt="">
-                            <p>lost lake</p>
+                        <a href="img/lost-lake.jpg">
+                            <img src="img/lost-lake.jpg" alt="">
+                            <p>Coming soon....lost lake</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/river walkway.jpg">
-                            <img src="img/river walkway.jpg" alt="">
-                            <p>river walkway</p>
+                        <a href="img/river-walkway.jpg">
+                            <img src="img/river-walkway.jpg" alt="">
+                            <p>Coming soon....river walkway</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/sailboat sunset.jpg">
-                            <img src="img/sailboat sunset.jpg" alt="">
-                            <p>sailboat sunset</p>
+                        <a href="img/sailboat-sunset.jpg">
+                            <img src="img/sailboat-sunset.jpg" alt="">
+                            <p>coming soon....sailboat sunset</p>
                         </a>
                     </li>
                 </ul>
