added technical blog page-1

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="img/lost-lake.jpg">
+                        <a href="blog/t2-html-css-dom-p1.html">
                             <img src="img/lost-lake.jpg" alt="">
-                            <p>Coming soon....lost lake</p>
+                            <p>technical blog part-1</p>
                         </a>
                     </li>
                     <li>
