thought I had already pushed this blog last weekend! Dough

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="img/river-walkway.jpg">
+                        <a href="blog/t2-html-css-dom-p2.html">
                             <img src="img/river-walkway.jpg" alt="">
-                            <p>Coming soon....river walkway</p>
+                            <p>technical blog part-2</p>
                         </a>
                     </li>
                     <li>
