emotional intelligence blog

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="img/sailboat-sunset.jpg">
+                        <a href="blog/c2-emotional-intelligence.html">
                             <img src="img/sailboat-sunset.jpg" alt="">
-                            <p>coming soon....sailboat sunset</p>
+                            <p>emotional intelligence</p>
                         </a>
                     </li>
                 </ul>
