created and updated personal blog

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Steve Sharp</h1>
-                <h2>Developer</h2>
+                <h2>Aspiring Developer</h2>
             </a>
             <nav>
                 <ul>
@@ -28,7 +28,7 @@
             <section>
                 <img src="img/steve.jpg" alt="Photograph of Steve Sharp"class="profile-photo">
                 <h3>About</h3>
-                    <p>Hi, I'm Steve Sharp! This is my first website and blog of my new journey with Dev Academy. At the moment when I'm not busying making new smiles for my patients, and I am busy trying to balance selling our first home and keeping up with the Phase-Zero work load. I enjoy exercising, flying my drone and drinking great coffee - amoung other things.</p>
+                    <p>Hi, I'm Steve Sharp! This is my first website and will be the blog of my new journey with Dev Academy. I studied at Otago Uni down in Dunedin to become a Clinical Dental Technician. Recently I quit my job, and have dived full-time into committing myself to a career change to become a web developer. I enjoy exercising, flying my drone and drinking great coffee - amoung other things.</p>
                     <p>If you'd like to follow me on twitter, my username is <a href="https://twitter.com/zimscubasteve">@zimscubasteve</a></p>
             </section>
             <footer>
