--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Steve Sharp</h1>
-                <h2>Developer</h2>
+                <h2>Aspiring Developer</h2>
             </a>
             <nav>
                 <ul>
@@ -37,24 +37,6 @@
                         <a href="blog/c1-time-and-habits-blog.html">
                             <img src="img/lighthouse-walkway.jpg" alt="">
                             <p>time and habits</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="blog/t2-html-css-dom-p1.html">
-                            <img src="img/lost-lake.jpg" alt="">
-                            <p>technical blog part-1</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="blog/t2-html-css-dom-p2.html">
-                            <img src="img/river-walkway.jpg" alt="">
-                            <p>technical blog part-2</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="blog/c2-emotional-intelligence.html">
-                            <img src="img/sailboat-sunset.jpg" alt="">
-                            <p>emotional intelligence</p>
                         </a>
                     </li>
                 </ul>
