--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Steve Sharp</h1>
-                <h2>Developer</h2>
+                <h2>Aspiring Developer</h2>
             </a>
             <nav>
                 <ul>
@@ -27,8 +27,8 @@
         <div id="wrapper">
             <section id="primary">
                 <h3>General Information</h3>
-                    <p>I am still currently working full-time, so I am normally available for pairing and/or chatting about Phase-Zero stuff on slack in the evenings and over the weekends</p>
-                    <p>Best way to contact me is through slack, the mobile app works really well I'm sure you will agree</p>
+                    <p>My fiance and I are currently living in Rotoroa, during the day she works as a Dentist and I work on my web dev journey at the public library. I am normally available for chatting about Phase-Zero stuff on slack during the day, and for pairing in the evenings and over the weekends.</p>
+                    <p>Best way to contact me is through slack, the mobile app works really well I'm sure you will agree. I believe the best way for us to learn is to do it together, and try to share our knowledge as best we can.</p>
             </section>
             <section id="secondary">
                 <h3>Contact Details</h3>
