added t2-p1 blog link and updated homepage files

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Steve Sharp | Developer</title>
+        <title>Steve Sharp | Aspiring Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
@@ -26,7 +26,7 @@
         </header>
         <div id="wrapper">
             <section>
-                <img src="img/steve.jpg" alt="Photograph of Steve Sharp"class="profile-photo">
+                <img src="img/steve.jpg" alt="Photograph of Steve Sharp" class="profile-photo">
                 <h3>About</h3>
                     <p>Hi, I'm Steve Sharp! This is my first website and will be the blog of my new journey with Dev Academy. I studied at Otago Uni down in Dunedin to become a Clinical Dental Technician. Recently I quit my job, and have dived full-time into committing myself to a career change to become a web developer. I enjoy exercising, flying my drone and drinking great coffee - amoung other things.</p>
                     <p>If you'd like to follow me on twitter, my username is <a href="https://twitter.com/zimscubasteve">@zimscubasteve</a></p>
