--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Steve Sharp | Developer</title>
+        <title>Steve Sharp | Aspiring Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
@@ -37,6 +37,12 @@
                         <a href="blog/c1-time-and-habits-blog.html">
                             <img src="img/lighthouse-walkway.jpg" alt="">
                             <p>time and habits</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="blog/t2-html-css-dom-p1.html">
+                            <img src="img/lost-lake.jpg" alt="">
+                            <p>technical blog part-1</p>
                         </a>
                     </li>
                 </ul>
