added link to sprint-2 ei blog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="selected">Portfolio</a></li>
+                    <li><a href="index.html" class="selected">Blogs</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -29,20 +29,26 @@
                 <ul id="gallery">
                     <li>
                         <a href="blog/c1-reflection-blog.html">
-                            <img src="img/horizon-blue-sky.jpg" alt="">
+                            <img src="img/horizon-blue-sky.jpg" alt="blue horizon">
                             <p>reflection</p>
                         </a>
                     </li>
                     <li>
                         <a href="blog/c1-time-and-habits-blog.html">
-                            <img src="img/lighthouse-walkway.jpg" alt="">
+                            <img src="img/lighthouse-walkway.jpg" alt="lighthouse">
                             <p>time and habits</p>
                         </a>
                     </li>
                     <li>
                         <a href="blog/t2-html-css-dom-p1.html">
-                            <img src="img/lost-lake.jpg" alt="">
+                            <img src="img/lost-lake.jpg" alt="lake">
                             <p>technical blog part-1</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="blog/c2-emotional-intelligence.html">
+                            <img src="img/sailboat-sunset.jpg" alt="sailboat">
+                            <p>emotional intelligence</p>
                         </a>
                     </li>
                 </ul>
