linked t2-blog to index.html

--- a/index.html
+++ b/index.html
@@ -30,25 +30,31 @@
                     <li>
                         <a href="blog/c1-reflection-blog.html">
                             <img src="img/horizon-blue-sky.jpg" alt="blue horizon">
-                            <p>reflection</p>
+                            <p>Initial Reflections</p>
                         </a>
                     </li>
                     <li>
                         <a href="blog/c1-time-and-habits-blog.html">
                             <img src="img/lighthouse-walkway.jpg" alt="lighthouse">
-                            <p>time and habits</p>
+                            <p>Time and Habits</p>
                         </a>
                     </li>
                     <li>
                         <a href="blog/t2-html-css-dom-p1.html">
                             <img src="img/lost-lake.jpg" alt="lake">
-                            <p>technical blog part-1</p>
+                            <p>Design and Structural Features</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="blog/t2-html-css-dom-p2.html">
+                            <img src="img/river-walkway.jpg" alt="">
+                            <p>CSS Frameworks and Responsive Design</p>
                         </a>
                     </li>
                     <li>
                         <a href="blog/c2-emotional-intelligence.html">
                             <img src="img/sailboat-sunset.jpg" alt="sailboat">
-                            <p>emotional intelligence</p>
+                            <p>Emotional Intelligence</p>
                         </a>
                     </li>
                 </ul>
