modified all html pages to open links in a new tab or window

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
                 </ul>
             </section>
             <footer>
-                <a href="https://twitter.com/zimscubasteve"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-                <a href="https://www.facebook.com/zimscubasteve"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-                <p>&copy; 2016 Steve Sharp.</p>
+                <a href="https://twitter.com/zimscubasteve" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+                <a href="https://www.facebook.com/zimscubasteve" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
             </footer>
         </div>
     </body>
