--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
                 <img src="img/steve.jpg" alt="Photograph of Steve Sharp" class="profile-photo">
                 <h3>About</h3>
                     <p>Hi, I'm Steve Sharp! This is my first website and will be the blog of my new journey with Dev Academy. I studied at Otago Uni down in Dunedin to become a Clinical Dental Technician. Recently I quit my job, and have dived full-time into committing myself to a career change to become a web developer. I enjoy exercising, flying my drone and drinking great coffee - amoung other things.</p>
-                    <p>If you'd like to follow me on twitter, my username is <a href="https://twitter.com/zimscubasteve">@zimscubasteve</a></p>
+                    <p>If you'd like to follow me on twitter, my username is <a href="https://twitter.com/zimscubasteve" target="_blank">@zimscubasteve</a></p>
             </section>
             <footer>
-                <a href="https://twitter.com/zimscubasteve"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-                <a href="https://www.facebook.com/zimscubasteve"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+                <a href="https://twitter.com/zimscubasteve" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+                <a href="https://www.facebook.com/zimscubasteve" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
                 <p>&copy; 2016 Steve Sharp.</p>
             </footer>
         </div>
