test browser redirect

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="5; URL='http://new-website.com'" />
     </head>
     <body>
         <header>
