minor tweek to syntax

--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
                 } else if (document.all) { // For IE 
                     window.location.href = "about:home";
                 } else {
-                    document.write("<p>Please click on your browser's Home
-                    button.</p>");
+                    document.write("<p>Please click on your browser's Home button.</p>");
                 }
             }
         </script>
