--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="refresh" content="5; URL= 'goHome()'" />
         <script language="javascript">
-            function goHome(){
+            var homePage = function goHome(){
             if (typeof window.home == 'function'){ // The rest of the world
                 window.home();
                 } else if (document.all) { // For IE 
@@ -21,6 +20,7 @@
                 }
             }
         </script>
+        <meta http-equiv="refresh" content="5; URL='homePage'" />
     </head>
     <body>
         <header>
