--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
                 } else {
                     document.write("<p>Please click on your browser's Home button.</p>");
                 }
+                return
             }
         </script>
         <meta http-equiv="refresh" content="5; URL='homePage'" />
