--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li><a href="index.html" class="selected">Blogs</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="redirect-home.html">Go Home</a></li>
                 </ul>
             </nav>
         </header>
