Minor tweek to try using "http://about:home"

--- a/redirect-home.html
+++ b/redirect-home.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script language="javascript">
+        <script>
             var homePage = function goHome(){
             if (typeof window.home == 'function'){ // The rest of the world
                 window.home();
@@ -21,9 +21,9 @@
                 return
             }
         </script>
-        <meta http-equiv="refresh" content="5; URL='window.home'" />
+        <meta http-equiv="refresh" content="5; URL='http://about:home'" />
     </head>
 <body>
-  <script src="js/scripts.js"></script>
+    <h2> Thank you for completeing you feedback form - Please wait to be re-directed to your homepage </h2>
 </body>
 </html>
