--- a/redirect-home.html
+++ b/redirect-home.html
@@ -21,7 +21,7 @@
                 return
             }
         </script>
-        <meta http-equiv="refresh" content="5; URL='http://about:home'" />
+        <meta http-equiv="refresh" content="5; href='about:home'"/>
     </head>
 <body>
     <h2> Thank you for completeing you feedback form - Please wait to be re-directed to your homepage </h2>
