--- a/redirect-home.html
+++ b/redirect-home.html
@@ -9,11 +9,11 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="refresh" content="5; href='about:home'"/>
+        <!--<meta http-equiv="refresh" content="5; href='about:home'"/>-->
     </head>
 <body>
     <h2>Thank you for completeing you feedback form - Please wait to be re-directed to your homepage</h2>
-        <script>
+        <!--<script>
             var homePage = function goHome(){
             if (typeof window.home == 'function'){ // The rest of the world
                 window.home();
@@ -24,6 +24,6 @@
                 }
                 return
             }
-        </script>
+        </script>-->
 </body>
 </html>
