--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Steve Sharp</h1>
-                <h2>Aspiring Developer</h2>
+                <h2>Full-Stack Web Developer</h2>
             </a>
             <nav>
                 <ul>
