Update "about me" details

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <div id="wrapper">
             <section id="primary">
                 <h3>General Information</h3>
-                    <p>My fiance and I are currently living in Rotoroa, during the day she works as a Dentist and I work on my web dev journey at the public library. I am normally available for chatting about Phase-Zero stuff on slack during the day, and for pairing in the evenings and over the weekends.</p>
+                    <p>My fiance and I are currently living in Rotoroa, during the day she works as a Dentist and I work part-time as a Clinical Dental Technician, and part-time on my web dev. I am normally available for chatting about stuff on slack during the day, and for pairing in the evenings and over the weekends.</p>
                     <p>Best way to contact me is through slack, the mobile app works really well I'm sure you will agree. I believe the best way for us to learn is to do it together, and try to share our knowledge as best we can.</p>
             </section>
             <section id="secondary">
