--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <section id="secondary">
                 <h3>Contact Details</h3>
                     <ul class="contact-info">
-                        <li class="phone"><a href="tel:021882976">021882976</a></li>
+                        <li class="phone"><a href="tel:+6478080808">+6478080808</a></li>
                         <li class="mail"><a href="mailto:zimsteve@live.com">zimsteve@live.com</a></li>
                         <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=zimscubasteve">@zimscubasteve</a></li>
                     </ul>
