--- a/about.html
+++ b/about.html
@@ -14,13 +14,14 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Steve Sharp</h1>
-                <h2>Aspiring Developer</h2>
+                <h2>Full-Stack Web Developer</h2>
             </a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Blogs</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="about.html" class="selected">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Go Home</a></li>
                 </ul>
             </nav>
         </header>
