--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="blogs.html" class="selected">Blogs</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="index.html">Go Home</a></li>
                 </ul>
             </nav>
         </header>
