--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="selected">Blogs</a></li>
+                    <li><a href="blogs.html" class="selected">Blogs</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="index.html">Go Home</a></li>
