--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         </header>
         <div id="wrapper">
             <section>
-              
+              <ul id="gallery">
+                <li>
+                    <img src="img/Cute-Monster.jpg" alt="Cute Monster">
+                </li>
+              </ul>
             </section>
             <footer>
                 <a href="https://twitter.com/zimscubasteve" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
