Small teaks for landing page

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
     <body>
         <header>
             <a href="index.html" id="logo">
-                <h1>Steve Sharp</h1>
-                <h2>Full-Stack Web Developer</h2>
+                <h1>Flossy Dental</h1>
+                <h2>Coming Soon....</h2>
             </a>
             <nav>
                 <ul>
-                    <li><a href="blogs.html">Blogs</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
