--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Steve Sharp | Aspiring Developer</title>
+        <title>Flossy Dental | Coming Soon</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
@@ -24,7 +24,7 @@
             <footer>
                 <a href="https://twitter.com/zimscubasteve" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
                 <a href="https://www.facebook.com/zimscubasteve" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-                <p>&copy; 2018 Steve Sharp.</p>
+                <p>&copy; 2023 Flossy Dental</p>
             </footer>
     </body>
 </html>
